<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_noisy"
        android:title="@string/action_noisy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_touch_slop"
        android:title="@string/action_touch_slop"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_bezier"
        android:title="@string/action_bezier"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reorder"
        android:title="@string/action_reorder"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_animated_bezier"
        android:title="@string/action_animated_bezier"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_tension"
        android:title="@string/action_tension"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_interpolated_tension"
        android:title="@string/action_interpolated_tension"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_shuffle"
        android:title="@string/action_shuffle"
        app:showAsAction="never"/>
</menu>
